<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.filter.FilterFragment">

    <RadioGroup
        android:id="@+id/rbgGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenero">

        <RadioButton
            android:id="@+id/rbHombre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gender_tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="Male"
            android:textColor="@drawable/gender_tab_text_color_selector" />

        <RadioButton
            android:id="@+id/rbMujer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gender_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="Female"
            android:textColor="@drawable/gender_tab_text_color_selector" />

        <RadioButton
            android:id="@+id/rbSinGenero"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gender_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="Genderless"
            android:textColor="@drawable/gender_tab_text_color_selector" />

        <RadioButton
            android:id="@+id/rbDesconocido"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/gender_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="Unknown"
            android:textColor="@drawable/gender_tab_text_color_selector" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvFiltros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_filters"
        android:textAlignment="center"
        android:textColor="@color/green_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_gender"
        android:textColor="@color/green_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFiltros" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_status"
        android:textColor="@color/green_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbgGenero" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado"
        app:singleSelection="true">


        <com.google.android.material.chip.Chip
            android:id="@+id/chipVivo"
            style="@style/CostumChip"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_vivo"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMuerto"
            style="@style/CostumChip"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_muerto"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDesconocido"
            style="@style/CostumChip"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_desconocido"
            android:textAlignment="center"
            android:textSize="14sp" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmar"
        app:backgroundTint="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button"
        android:text="@string/btn_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnRestablecer"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupEstado" />

    <Button
        android:id="@+id/btnRestablecer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_second"
        android:text="@string/btn_reset"
        android:textColor="@color/green_light"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnConfirmar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupEstado" />

</androidx.constraintlayout.widget.ConstraintLayout>