<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCharacter"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_character"
                android:elevation="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/ivArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/ligth"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivArrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivArrow" />

                <TextView
                    android:id="@+id/tvId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/ligth"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tvGenered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_gender"
                app:layout_constraintEnd_toStartOf="@+id/tvStatus"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSpecies" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvGenered"
                app:layout_constraintTop_toBottomOf="@+id/tvSpecies" />

            <TextView
                android:id="@+id/tvSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Species"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="125dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/clCharacter">

                <ImageView
                    android:id="@+id/ivCharacter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvGenderValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvGenered"
                app:layout_constraintStart_toStartOf="@+id/tvGenered"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tvStateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dead"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLocation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStateValue">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvLocationValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.428" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvLocation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvOrigenValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="2dp"
                android:text="@string/txt_location"
                app:layout_constraintBottom_toTopOf="@+id/cvLocation"
                app:layout_constraintStart_toStartOf="@+id/cvLocation" />

            <TextView
                android:id="@+id/tvOrigen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="2dp"
                android:text="@string/txt_origin"
                app:layout_constraintBottom_toTopOf="@+id/cardView2"
                app:layout_constraintStart_toStartOf="@+id/cardView2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_icons"
                android:backgroundTintMode="src_over"
                app:layout_constraintEnd_toEndOf="@+id/tvGenered"
                app:layout_constraintStart_toStartOf="@+id/tvGenered"
                app:layout_constraintTop_toBottomOf="@+id/tvGenered" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_icons"
                android:paddingTop="6dp"
                app:layout_constraintEnd_toEndOf="@+id/tvStatus"
                app:layout_constraintStart_toStartOf="@+id/tvStatus"
                app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>